Fixing spacing on bullet points

--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -19,6 +19,7 @@
 
 .experienceList {
 	list-style-type: disc;
+	width: 80%;
 }
 
 .experience-item {
